<?xml version="1.0"?>
<package>
  <name>visualization</name>
  <version>0.0.0</version>
  <description>visualization</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="your_email@example.com">parkyechan</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <author email="your_email@example.com">parkyechan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>

  <build_depend>opencv</build_depend>
  <run_depend>opencv</run_depend>

  <build_depend>PCL</build_depend>
  <run_depend>PCL</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
